--- a/basecamp/templates/basecamp/navbar.html
+++ b/basecamp/templates/basecamp/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-lg fixed-top navbar-light bg-light" id="navbar">
     <div class="container">
-        <a href="/" class="navbar-brand">Elvis Lab.</a>
+        <a href="/" class="navbar-brand">LeeGyeongRin.</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
